[metadata]
author = Vladimír Vondruš
name = m.css
version = 0.0.1
description = A no-nonsense, no-JavaScript CSS framework and Pelican theme for content-oriented websites.
long_description = file: README.rst
url = https://mcss.mosra.cz
license = MIT
license_file = COPYING
include_package_data = True

[options]
python_requires = >= 3.6
package_dir=
    =plugins
packages=find:
setup_requires =
    setuptools>=39.2.0

install_requires =
    pelican

[options.packages.find]
where=plugins

[options.package_data]
* = *.html, *.css, *.rst
